...
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ivlike"
                        android:layout_width="112dp"
                        android:layout_height="96dp"
...
                        android:src="@drawable/like"/>
                    <ImageView
                        android:id="@+id/ivyes"
                        android:layout_width="112dp"
                        android:layout_height="96dp"
...
                        android:src="@drawable/yes"/>
                    <ImageView
                        android:id="@+id/ivadd"
                        android:layout_width="112dp"
                        android:layout_height="96dp"
...
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ivdislike"
                        android:layout_width="112dp"
                        android:layout_height="96dp"
...
                        android:src="@drawable/dontlike"/>
                    <ImageView
                        android:id="@+id/ivno"
                        android:layout_width="112dp"
                        android:layout_height="96dp"
...
                        android:src="@drawable/no"/>
                    <ImageView
                        android:id="@+id/ivminus"
                        android:layout_width="112dp"
                        android:layout_height="96dp"
...
                android:padding="8dp">
                <TextView
                    android:id="@+id/tt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_below="@+id/tt1">
                    <LinearLayout
                        android:id="@+id/linearLayoutOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/image1"
                                android:layout_width="104dp"
                                android:layout_height="104dp"
...
                                android:scaleType="centerInside" />
                            <View
                                android:id="@+id/borderView1"
                                android:layout_width="104dp"
                                android:layout_height="104dp"
...
                        </LinearLayout>
                        <TextView
                            android:id="@+id/bt1"
                            android:layout_width="104dp"
                            android:layout_height="wrap_content"
...
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/linearLayoutTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:id="@+id/image2"
                                    android:layout_width="104dp"
                                    android:layout_height="104dp"
...
                                    android:scaleType="centerInside" />
                                <View
                                    android:id="@+id/borderView2"
                                    android:layout_width="104dp"
                                    android:layout_height="104dp"
...
                        </LinearLayout>
                        <TextView
                            android:id="@+id/bt2"
                            android:layout_width="104dp"
                            android:layout_height="wrap_content"
...
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/linearLayoutThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/image3"
                                android:layout_width="104dp"
                                android:layout_height="104dp"
...
                                android:scaleType="centerInside" />
                            <View
                                android:id="@+id/borderView3"
                                android:layout_width="104dp"
                                android:layout_height="104dp"
...
                        </FrameLayout>
                        <TextView
                            android:id="@+id/bt3"
                            android:layout_width="104dp"
                            android:layout_height="wrap_content"
...
                    android:gravity="center_horizontal">
                    <Button
                        android:id="@+id/backward"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
...
                        android:contentDescription="@string/previous"/>
                    <Button
                        android:id="@+id/forward"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
...
            android:contentDescription="@string/home"/>
        <ImageView
            android:id="@+id/keyboard"
            android:layout_width="130dp"
            android:layout_height="130dp"
...
            android:contentDescription="@string/keyboard_open"/>
        <ImageView
            android:id="@+id/ivback"
            android:layout_width="130dp"
            android:layout_height="130dp"
...
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et"
            android:layout_width="430dp"
            android:layout_height="80dp"
...
            android:contentDescription="@string/edttxt_msg"/>
        <ImageView
            android:id="@+id/ttsbutton"
            android:layout_width="68dp"
            android:layout_height="68dp"
...
