...
    <string name="dismiss">Dismiss</string>
    <string name="register_user">Please wait registration is in process…</string>
    <string name="exit">Exit</string>
    <string name="err_dialog_msg">Google TTS engine is not installed on your device. Do you want to install TTS engine?</string>
    <string name="exit_dialog_msg">Jellow will not work without Google Text-to-speech engine. Do you really want to exit?</string>

    <string name="level_one_intent_pos_tag" translatable="false">mLevelOneItemPos</string>
    <string name="intent_menu_path_tag" translatable="false">selectedMenuItemPath</string>
    <string name="level_2_item_pos_tag" translatable="false">mLevelTwoItemPos</string>

    <string name="next_slide">Next slide</string>
    <string name="previous_slide">Previous slide</string>

    <!--Strings related to the Searching capability
    @AyazAlam
...
